--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="txt_loading">数据加载中...</string>
     <string name="txt_has_no_more">没有更多了</string>
     <string name="txt_no_net">网络中断，请检查您的网络状态</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txt_no_data">暂无数据</string>
+    <string name="txt_data_error_retry">获取数据失败，点击重试</string>
+    <string name="tx_loading">数据加载中...</string>
+    <string name="txt_nonet_retry">网络连接不可用，点击重试</string>
 
 </resources>
